Update WiDS Datathon 2024 - Equity in Healthcare.ipynb

--- a/WiDS Datathon 2024 - Equity in Healthcare.ipynb
+++ b/WiDS Datathon 2024 - Equity in Healthcare.ipynb
@@ -1302,7 +1302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Open pickled random forest model\n",
+    "# Open pickled model\n",
     "with open(path+'xgb_cv_model.pickle', 'rb') as to_read:\n",
     "    xgb_cv = pickle.load(to_read)\n",
     "    \n",
